@@ -9,11 +9,15 @@ package com.powsybl.iidm.network.tck;
 
 import com.google.common.collect.Iterables;
 import com.powsybl.commons.PowsyblException;
+import com.powsybl.commons.report.PowsyblCoreReportResourceBundle;
+import com.powsybl.commons.test.PowsyblTestReportResourceBundle;
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.iidm.network.*;
 import com.powsybl.iidm.network.VoltageLevel.NodeBreakerView;
 import com.powsybl.iidm.network.test.*;
 import com.powsybl.iidm.network.util.Networks;
+import com.powsybl.iidm.network.util.TieLineUtil;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
 import java.time.ZoneOffset;
@@ -23,8 +27,11 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.assertj.core.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.*;
+import static com.powsybl.iidm.network.test.NetworkTest1Factory.id;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -47,6 +54,13 @@ public abstract class AbstractNetworkTest {
     private static final String VLHV1 = "VLHV1";
     private static final String VLGEN = "VLGEN";
     private static final String VLBAT = "VLBAT";
+
+    @BeforeAll
+    public static void makeMergeNetwork() {
+        Network n1 = AbstractSubnetworksExplorationTest.createNetwork(ID_1, Country.BE);
+        Network n2 = AbstractSubnetworksExplorationTest.createNetwork(ID_2, Country.DE);
+        fullNetwork = Network.merge("full", n1, n2);
+    }
 
     @Test
     public void testNetwork1() {
@@ -88,8 +102,7 @@ public abstract class AbstractNetworkTest {
         nodesByBus.forEach((busId, nodes) -> {
             if (nodes.contains(0)) {
                 assertEquals(1.0, voltageLevel1.getBusView().getBus(busId).getFictitiousP0(), 0.0);
-            } else if (nodes.contains(1)) {
-                assertEquals(2.0, voltageLevel1.getBusView().getBus(busId).getFictitiousP0(), 0.0);
+                assertEquals(2.0, voltageLevel1.getBusView().getBus(busId).getFictitiousQ0(), 0.0);
             }
         });
 
@@ -117,7 +130,7 @@ public abstract class AbstractNetworkTest {
         assertEquals(Arrays.asList(network.getSwitch("generator1Disconnector1"), network.getSwitch("generator1Breaker1")),
             topology1.getSwitches(6));
         assertEquals(Arrays.asList(network.getSwitch("load1Disconnector1"), network.getSwitch("load1Breaker1")),
-            topology1.getSwitchStream(3).collect(Collectors.toList()));
+            topology1.getSwitchStream(3).toList());
         assertEquals(Collections.singletonList(network.getSwitch("load1Disconnector1")), topology1.getSwitches(2));
 
         assertEquals(5, Iterables.size(network.getSwitches()));
@@ -175,8 +188,8 @@ public abstract class AbstractNetworkTest {
 
         // Changes listener
         NetworkListener exceptionListener = mock(DefaultNetworkListener.class);
-        doThrow(new UnsupportedOperationException()).when(exceptionListener).onElementAdded(any(), anyString(), any());
-        doThrow(new UnsupportedOperationException()).when(exceptionListener).onElementReplaced(any(), anyString(),
+        doThrow(new UnsupportedOperationException()).when(exceptionListener).onPropertyAdded(any(), anyString(), any());
+        doThrow(new UnsupportedOperationException()).when(exceptionListener).onPropertyReplaced(any(), anyString(),
                 any(), any());
         NetworkListener mockedListener = mock(DefaultNetworkListener.class);
 
@@ -204,12 +217,12 @@ public abstract class AbstractNetworkTest {
 
         // Check notification done
         verify(mockedListener, times(1))
-                .onElementAdded(busCalc, "properties[" + key + "]", value);
+                .onPropertyAdded(busCalc, "properties[" + key + "]", value);
         // Check no notification on same property
         String value2 = "ValueTest2";
         busCalc.setProperty(key, value2);
         verify(mockedListener, times(1))
-                .onElementReplaced(busCalc, "properties[" + key + "]", value, value2);
+                .onPropertyReplaced(busCalc, "properties[" + key + "]", value, value2);
         // Check no notification on same property
         busCalc.setProperty(key, value2);
         verifyNoMoreInteractions(mockedListener);
@@ -352,7 +365,7 @@ public abstract class AbstractNetworkTest {
         //Specific test on battery
         assertEquals(battery1, voltageLevel2.getConnectable("BAT", Battery.class));
         //Stream test
-        Function<Stream<? extends Identifiable>, List<String>> mapper = stream -> stream.map(Identifiable::getId).collect(Collectors.toList());
+        Function<Stream<? extends Identifiable>, List<String>> mapper = stream -> stream.map(Identifiable::getId).toList();
         assertEquals(Arrays.asList("BAT", "BAT2"), mapper.apply(network.getBatteryStream()));
         assertEquals(network.getBatteryCount(), network.getBatteryStream().count());
         assertEquals(Arrays.asList("BAT", "BAT2"), mapper.apply(network.getVoltageLevel(VLBAT).getBatteryStream()));
@@ -373,13 +386,13 @@ public abstract class AbstractNetworkTest {
         Network n = EurostagTutorialExample1Factory.create();
         assertEquals(6, n.getConnectableCount());
         assertNotNull(n.getConnectable("GEN"));
-        assertTrue(n.getConnectable("GEN") instanceof Generator);
+        assertInstanceOf(Generator.class, n.getConnectable("GEN"));
         assertEquals("GEN", n.getConnectable("GEN").getId());
     }
 
     @Test
     public void testStreams() {
-        Function<Stream<? extends Identifiable>, List<String>> mapper = stream -> stream.map(Identifiable::getId).collect(Collectors.toList());
+        Function<Stream<? extends Identifiable>, List<String>> mapper = stream -> stream.map(Identifiable::getId).toList();
         Function<Stream<? extends Identifiable>, Set<String>> mapperSet = stream -> stream.map(Identifiable::getId).collect(Collectors.toSet());
 
         Network network = EurostagTutorialExample1Factory.create();
@@ -404,33 +417,32 @@ public abstract class AbstractNetworkTest {
                 .setB(0.0)
                 .add();
 
-        assertEquals(Arrays.asList("P1", "P2"), mapper.apply(network.getSubstationStream()));
+        assertThat(mapper.apply(network.getSubstationStream())).containsExactlyInAnyOrder("P1", "P2");
         assertEquals(network.getSubstationCount(), network.getSubstationStream().count());
-        assertEquals(Arrays.asList(NHV1_NHV2_1, NHV1_NHV2_2), mapper.apply(network.getLineStream()));
+        assertThat(mapper.apply(network.getLineStream())).containsExactlyInAnyOrder(NHV1_NHV2_1, NHV1_NHV2_2);
         assertEquals(network.getLineCount(), network.getLineStream().count());
 
-        assertEquals(Arrays.asList(VLGEN, VLHV1, VLHV2, VLLOAD), mapper.apply(network.getVoltageLevelStream()));
+        assertThat(mapper.apply(network.getVoltageLevelStream())).containsExactlyInAnyOrder(VLGEN, VLHV1, VLHV2, VLLOAD);
         assertEquals(network.getVoltageLevelCount(), network.getVoltageLevelStream().count());
-        assertEquals(Arrays.asList(VLGEN, VLHV1), mapper.apply(network.getSubstation("P1").getVoltageLevelStream()));
-        assertEquals(Arrays.asList(VLHV2, VLLOAD), mapper.apply(network.getSubstation("P2").getVoltageLevelStream()));
+        assertThat(mapper.apply(network.getSubstation("P1").getVoltageLevelStream())).containsExactlyInAnyOrder(VLGEN, VLHV1);
+        assertThat(mapper.apply(network.getSubstation("P2").getVoltageLevelStream())).containsExactlyInAnyOrder(VLHV2, VLLOAD);
 
-        assertEquals(Arrays.asList("NGEN", "NHV1", "NHV1_bis", "NHV2", "NLOAD"), mapper.apply(network.getBusBreakerView().getBusStream()));
+        assertThat(mapper.apply(network.getBusBreakerView().getBusStream())).containsExactlyInAnyOrder("NGEN", "NHV1", "NHV1_bis", "NHV2", "NLOAD");
         assertEquals(Collections.singletonList("NGEN"), mapper.apply(network.getVoltageLevel(VLGEN).getBusBreakerView().getBusStream()));
-        assertEquals(Arrays.asList("NHV1", "NHV1_bis"), mapper.apply(network.getVoltageLevel(VLHV1).getBusBreakerView().getBusStream()));
+        assertThat(mapper.apply(network.getVoltageLevel(VLHV1).getBusBreakerView().getBusStream())).containsExactlyInAnyOrder("NHV1", "NHV1_bis");
         assertEquals(Collections.singletonList("NHV2"), mapper.apply(network.getVoltageLevel(VLHV2).getBusBreakerView().getBusStream()));
         assertEquals(Collections.singletonList("NLOAD"), mapper.apply(network.getVoltageLevel(VLLOAD).getBusBreakerView().getBusStream()));
-
-        assertEquals(Arrays.asList(NHV1_NHV2_1, NHV1_NHV2_2, NGEN_NHV1, nhv1nhv1), mapper.apply(network.getVoltageLevel(VLHV1).getConnectableStream()));
+        assertThat(mapper.apply(network.getVoltageLevel(VLHV1).getConnectableStream())).containsExactlyInAnyOrder(NHV1_NHV2_1, NHV1_NHV2_2, NGEN_NHV1, nhv1nhv1);
         assertEquals(network.getVoltageLevel(VLHV1).getConnectableCount(), network.getVoltageLevel(VLHV1).getConnectableStream().count());
 
-        assertEquals(Arrays.asList(NGEN_NHV1, NHV2_NLOAD, nhv1nhv1), mapper.apply(network.getTwoWindingsTransformerStream()));
+        assertThat(mapper.apply(network.getTwoWindingsTransformerStream())).containsExactlyInAnyOrder(NGEN_NHV1, NHV2_NLOAD, nhv1nhv1);
         assertEquals(network.getTwoWindingsTransformerCount(), network.getTwoWindingsTransformerStream().count());
-        assertEquals(Arrays.asList(NGEN_NHV1, nhv1nhv1), mapper.apply(network.getSubstation("P1").getTwoWindingsTransformerStream()));
+        assertThat(mapper.apply(network.getSubstation("P1").getTwoWindingsTransformerStream())).containsExactlyInAnyOrder(NGEN_NHV1, nhv1nhv1);
         assertEquals(Collections.singleton(NHV2_NLOAD), mapperSet.apply(network.getSubstation("P2").getTwoWindingsTransformerStream()));
-        assertEquals(Arrays.asList(NGEN_NHV1, nhv1nhv1), mapper.apply(network.getVoltageLevel(VLHV1).getConnectableStream(TwoWindingsTransformer.class)));
+        assertThat(mapper.apply(network.getVoltageLevel(VLHV1).getConnectableStream(TwoWindingsTransformer.class))).containsExactlyInAnyOrder(NGEN_NHV1, nhv1nhv1);
         assertEquals(network.getVoltageLevel(VLHV1).getConnectableCount(TwoWindingsTransformer.class), network.getVoltageLevel(VLHV1).getConnectableStream(TwoWindingsTransformer.class).count());
 
-        assertEquals(Arrays.asList(NHV1_NHV2_1, NHV1_NHV2_2, NGEN_NHV1, NHV2_NLOAD, nhv1nhv1), mapper.apply(network.getBranchStream()));
+        assertThat(mapper.apply(network.getBranchStream())).containsExactlyInAnyOrder(NHV1_NHV2_1, NHV1_NHV2_2, NGEN_NHV1, NHV2_NLOAD, nhv1nhv1);
         assertEquals(network.getBranchCount(), network.getBranchStream().count());
 
         assertEquals(Collections.emptyList(), mapper.apply(network.getThreeWindingsTransformerStream()));
@@ -457,15 +469,15 @@ public abstract class AbstractNetworkTest {
         assertEquals(Collections.singletonList(NGEN_NHV1), mapper.apply(bus.getTwoWindingsTransformerStream()));
         assertEquals(Collections.singletonList("GEN"), mapper.apply(bus.getGeneratorStream()));
         bus = network.getVoltageLevel(VLHV1).getBusView().getBus("VLHV1_0");
-        assertEquals(Arrays.asList(NHV1_NHV2_1, NHV1_NHV2_2), mapper.apply(bus.getLineStream()));
-        assertEquals(Arrays.asList(NGEN_NHV1, nhv1nhv1), mapper.apply(bus.getTwoWindingsTransformerStream()));
+        assertThat(mapper.apply(bus.getLineStream())).containsExactlyInAnyOrder(NHV1_NHV2_1, NHV1_NHV2_2);
+        assertThat(mapper.apply(bus.getTwoWindingsTransformerStream())).containsExactlyInAnyOrder(NGEN_NHV1, nhv1nhv1);
         bus = network.getVoltageLevel(VLHV2).getBusView().getBus("VLHV2_0");
         assertEquals(Collections.singletonList(NHV2_NLOAD), mapper.apply(bus.getTwoWindingsTransformerStream()));
         bus = network.getVoltageLevel(VLLOAD).getBusView().getBus("VLLOAD_0");
         assertEquals(Collections.singletonList("LOAD"), mapper.apply(bus.getLoadStream()));
 
         // Connectables
-        assertEquals(Arrays.asList("LOAD", NHV1_NHV2_2, NGEN_NHV1, NHV1_NHV2_1, NHV2_NLOAD, "GEN", "NHV1_NHV1"), mapper.apply(network.getConnectableStream()));
+        assertThat(mapper.apply(network.getConnectableStream())).containsExactlyInAnyOrder("LOAD", NHV1_NHV2_2, NGEN_NHV1, NHV1_NHV2_1, NHV2_NLOAD, "GEN", "NHV1_NHV1");
         assertArrayEquals(Iterables.toArray(network.getConnectables(), Connectable.class), network.getConnectableStream().toArray());
         assertEquals(network.getConnectableCount(), network.getConnectableStream().count());
 
@@ -485,9 +497,9 @@ public abstract class AbstractNetworkTest {
         network = HvdcTestNetwork.createLcc();
         assertEquals(Collections.singletonList("L"), mapper.apply(network.getHvdcLineStream()));
         assertEquals(network.getHvdcLineCount(), network.getHvdcLineStream().count());
-        assertEquals(Arrays.asList("C1", "C2"), mapper.apply(network.getLccConverterStationStream()));
+        assertThat(mapper.apply(network.getLccConverterStationStream())).containsExactlyInAnyOrder("C1", "C2");
         assertEquals(network.getLccConverterStationCount(), network.getLccConverterStationStream().count());
-        assertEquals(Arrays.asList("C1", "C2"), mapper.apply(network.getHvdcConverterStationStream()));
+        assertThat(mapper.apply(network.getHvdcConverterStationStream())).containsExactlyInAnyOrder("C1", "C2");
         assertEquals(network.getHvdcConverterStationCount(), network.getHvdcConverterStationStream().count());
         assertEquals(Collections.singletonList("C1"), mapper.apply(network.getVoltageLevel("VL1").getLccConverterStationStream()));
         assertEquals(Collections.singletonList("C2"), mapper.apply(network.getVoltageLevel("VL2").getLccConverterStationStream()));
@@ -495,14 +507,14 @@ public abstract class AbstractNetworkTest {
         bus = network.getVoltageLevel("VL2").getBusView().getBus(VL2_0);
         assertEquals(Collections.singletonList("C2"), mapper.apply(bus.getLccConverterStationStream()));
 
-        assertEquals(Arrays.asList("BK1", "BK2", "BK3"), mapper.apply(network.getBusBreakerView().getSwitchStream()));
+        assertThat(mapper.apply(network.getBusBreakerView().getSwitchStream())).containsExactlyInAnyOrder("BK1", "BK2", "BK3");
 
         network = HvdcTestNetwork.createVsc();
         assertEquals(Collections.singletonList("L"), mapper.apply(network.getHvdcLineStream()));
         assertEquals(network.getHvdcLineCount(), network.getHvdcLineStream().count());
-        assertEquals(Arrays.asList("C1", "C2"), mapper.apply(network.getVscConverterStationStream()));
+        assertThat(mapper.apply(network.getVscConverterStationStream())).containsExactlyInAnyOrder("C1", "C2");
         assertEquals(network.getVscConverterStationCount(), network.getVscConverterStationStream().count());
-        assertEquals(Arrays.asList("C1", "C2"), mapper.apply(network.getHvdcConverterStationStream()));
+        assertThat(mapper.apply(network.getHvdcConverterStationStream())).containsExactlyInAnyOrder("C1", "C2");
         assertEquals(network.getHvdcConverterStationCount(), network.getHvdcConverterStationStream().count());
         assertEquals(Collections.singletonList("C1"), mapper.apply(network.getVoltageLevel("VL1").getVscConverterStationStream()));
         assertEquals(Collections.singletonList("C2"), mapper.apply(network.getVoltageLevel("VL2").getVscConverterStationStream()));
@@ -512,17 +524,17 @@ public abstract class AbstractNetworkTest {
 
         // Topology
         network = NetworkTest1Factory.create();
-        assertEquals(Arrays.asList(VOLTAGE_LEVEL1_BUSBAR_SECTION1, VOLTAGE_LEVEL1_BUSBAR_SECTION2),
-                mapper.apply(network.getVoltageLevel(VOLTAGE_LEVEL1).getNodeBreakerView().getBusbarSectionStream()));
+        assertThat(mapper.apply(network.getVoltageLevel(VOLTAGE_LEVEL1).getNodeBreakerView().getBusbarSectionStream()))
+            .containsExactlyInAnyOrder(VOLTAGE_LEVEL1_BUSBAR_SECTION1, VOLTAGE_LEVEL1_BUSBAR_SECTION2);
         assertEquals(Collections.singletonList(VOLTAGE_LEVEL1_BREAKER1),
                 mapper.apply(network.getVoltageLevel(VOLTAGE_LEVEL1).getNodeBreakerView()
                         .getSwitchStream()
                         .filter(sw -> sw.getKind() == SwitchKind.BREAKER)));
-        assertEquals(Arrays.asList("load1Disconnector1", "load1Breaker1"),
-                mapper.apply(network.getVoltageLevel(VOLTAGE_LEVEL1).getNodeBreakerView()
-                        .getSwitchStream()
-                        .filter(sw -> sw.getKind() == SwitchKind.DISCONNECTOR)
-                        .limit(2)));
+        assertThat(mapper.apply(network.getVoltageLevel(VOLTAGE_LEVEL1).getNodeBreakerView()
+            .getSwitchStream()
+            .filter(sw -> sw.getKind() == SwitchKind.DISCONNECTOR)
+            .limit(2)))
+            .containsExactlyInAnyOrder("load1Disconnector1", "load1Breaker1");
         assertEquals(Collections.emptyList(),
                 mapper.apply(network.getVoltageLevel(VOLTAGE_LEVEL1).getNodeBreakerView()
                         .getSwitchStream()
@@ -575,7 +587,8 @@ public abstract class AbstractNetworkTest {
     @Test
     public void testCreate() {
         // check default implementation is used
-        Network.create("test", "test");
+        Network network = assertDoesNotThrow(() -> Network.create("test", "test"));
+        assertNotNull(network);
     }
 
     @Test
@@ -596,16 +609,18 @@ public abstract class AbstractNetworkTest {
     public void testScadaNetwork() {
         Network network = ScadaNetworkFactory.create();
         assertEquals(ValidationLevel.EQUIPMENT, network.getValidationLevel());
-
         assertEquals(ValidationLevel.EQUIPMENT, network.runValidationChecks(false));
 
-        ReportNode reportNode = ReportNode.newRootReportNode().withMessageTemplate("testReportScadaNetwork", "Test reporting of SCADA network").build();
+        ReportNode reportNode = ReportNode.newRootReportNode()
+                .withResourceBundles(PowsyblTestReportResourceBundle.TEST_BASE_NAME, PowsyblCoreReportResourceBundle.BASE_NAME)
+                .withMessageTemplate("testReportScadaNetwork")
+                .build();
         assertEquals(ValidationLevel.EQUIPMENT, network.runValidationChecks(false, reportNode));
 
         List<ReportNode> children = reportNode.getChildren();
         assertEquals(1, children.size());
         ReportNode reportNodeChild = children.get(0);
-        assertEquals("IIDMValidation", reportNodeChild.getMessageKey());
+        assertEquals("core.iidm.network.IIDMValidation", reportNodeChild.getMessageKey());
         assertEquals("Running validation checks on IIDM network scada", reportNodeChild.getMessage());
 
         List<ReportNode> messageNodes = reportNodeChild.getChildren();
@@ -684,5 +699,304 @@ public abstract class AbstractNetworkTest {
         currentLimits.setPermanentLimit(Double.NaN);
         assertTrue(Double.isNaN(currentLimits.getPermanentLimit()));
         assertEquals(ValidationLevel.EQUIPMENT, network.getValidationLevel());
+    }
+
+    @Test
+    public void testSetMinimumAcceptableValidationLevelOnInvalidatedNetwork() {
+        Network network = Network.create("test", "iidm");
+        network.setMinimumAcceptableValidationLevel(ValidationLevel.EQUIPMENT);
+        VoltageLevel vl = network.newSubstation().setId("s1").add()
+                .newVoltageLevel().setId("vl1").setNominalV(100).setTopologyKind(TopologyKind.NODE_BREAKER).add();
+        Load l1 = vl.newLoad().setId("l1").setNode(0).add();
+        assertEquals(ValidationLevel.EQUIPMENT, network.getValidationLevel());
+
+        l1.setP0(10.0);
+        l1.setQ0(1.0);
+
+        network.setMinimumAcceptableValidationLevel(ValidationLevel.STEADY_STATE_HYPOTHESIS);
+        assertEquals(ValidationLevel.STEADY_STATE_HYPOTHESIS, network.getValidationLevel());
+    }
+
+    private static final String ID_1 = "1";
+    private static final String ID_2 = "2";
+    private static Network fullNetwork;
+
+    @Test
+    public void testIdentifiableStreamNetwork() {
+        Set<String> expected = Set.of(
+                "full",
+                id("network", ID_1),
+                id("network", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.NETWORK);
+    }
+
+    @Test
+    public void testIdentifiableStreamSubstation() {
+        Set<String> expected = Set.of(
+                id("substation1", ID_1),
+                id("substation1", ID_2),
+                id("substation2", ID_1),
+                id("substation2", ID_2),
+                id("substation3", ID_1),
+                id("substation3", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.SUBSTATION);
+    }
+
+    @Test
+    public void testIdentifiableStreamVoltageLevel() {
+        Set<String> expected = Set.of(
+                id("voltageLevel1", ID_1),
+                id("voltageLevel1", ID_2),
+                id("voltageLevel2", ID_1),
+                id("voltageLevel2", ID_2),
+                id("voltageLevel3", ID_1),
+                id("voltageLevel3", ID_2),
+                id("voltageLevel4", ID_1),
+                id("voltageLevel4", ID_2),
+                id("voltageLevel5", ID_1),
+                id("voltageLevel5", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.VOLTAGE_LEVEL);
+    }
+
+    @Test
+    public void testIdentifiableStreamArea() {
+        Set<String> expected = Set.of(
+                id("area1", ID_1),
+                id("area1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.AREA);
+    }
+
+    @Test
+    public void testIdentifiableStreamHvdcLine() {
+        Set<String> expected = Set.of(
+                id("hvdcLine1", ID_1),
+                id("hvdcLine1", ID_2),
+                id("hvdcLine2", ID_1),
+                id("hvdcLine2", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.HVDC_LINE);
+    }
+
+    @Test
+    public void testIdentifiableStreamSwitch() {
+        Set<String> expected = Set.of(
+                id("voltageLevel1Breaker1", ID_1),
+                id("load1Disconnector1", ID_1),
+                id("load1Breaker1", ID_1),
+                id("generator1Disconnector1", ID_1),
+                id("generator1Breaker1", ID_1),
+                id("voltageLevel1Breaker1", ID_2),
+                id("load1Disconnector1", ID_2),
+                id("load1Breaker1", ID_2),
+                id("generator1Disconnector1", ID_2),
+                id("generator1Breaker1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.SWITCH);
+    }
+
+    @Test
+    public void testIdentifiableStreamBusBarSection() {
+        Set<String> expected = Set.of(
+                id("voltageLevel1BusbarSection1", ID_1),
+                id("voltageLevel1BusbarSection2", ID_1),
+                id("voltageLevel1BusbarSection1", ID_2),
+                id("voltageLevel1BusbarSection2", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.BUSBAR_SECTION);
+    }
+
+    @Test
+    public void testIdentifiableStreamLine() {
+        Set<String> expected = Set.of(
+                id("line1", ID_1),
+                id("line1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.LINE);
+    }
+
+    @Test
+    public void testIdentifiableStreamTieLine() {
+        Set<String> expected = Set.of(
+                id("tieLine1", ID_1),
+                id("tieLine1", ID_2),
+                TieLineUtil.buildMergedId(id("danglingLine3", ID_1), id("danglingLine3", ID_2))
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.TIE_LINE);
+    }
+
+    @Test
+    public void testIdentifiableStream2WT() {
+        Set<String> expected = Set.of(
+                id("twoWindingsTransformer1", ID_1),
+                id("twoWindingsTransformer1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.TWO_WINDINGS_TRANSFORMER);
+    }
+
+    @Test
+    public void testIdentifiableStream3WT() {
+        Set<String> expected = Set.of(
+                id("threeWindingsTransformer1", ID_1),
+                id("threeWindingsTransformer1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.THREE_WINDINGS_TRANSFORMER);
+    }
+
+    @Test
+    public void testIdentifiableStreamGenerator() {
+        Set<String> expected = Set.of(
+                id("generator1", ID_1),
+                id("generator1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.GENERATOR);
+    }
+
+    @Test
+    public void testIdentifiableStreamBattery() {
+        Set<String> expected = Set.of(
+                id("battery1", ID_1),
+                id("battery1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.BATTERY);
+    }
+
+    @Test
+    public void testIdentifiableStreamLoad() {
+        Set<String> expected = Set.of(
+                id("load1", ID_1),
+                id("load1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.LOAD);
+    }
+
+    @Test
+    public void testIdentifiableStreamShuntCompensator() {
+        Set<String> expected = Set.of(
+                id("shuntCompensator1", ID_1),
+                id("shuntCompensator1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.SHUNT_COMPENSATOR);
+    }
+
+    @Test
+    public void testIdentifiableStreamDanglingLine() {
+        Set<String> expected = Set.of(
+                id("danglingLine1", ID_1),
+                id("danglingLine2", ID_1),
+                id("danglingLine3", ID_1),
+                id("danglingLine1", ID_2),
+                id("danglingLine2", ID_2),
+                id("danglingLine3", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.DANGLING_LINE);
+    }
+
+    @Test
+    public void testIdentifiableStreamStaticVarCompensator() {
+        Set<String> expected = Set.of(
+                id("svc1", ID_1),
+                id("svc1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.STATIC_VAR_COMPENSATOR);
+    }
+
+    @Test
+    public void testIdentifiableStreamHvdcConverterStation() {
+        Set<String> expected = Set.of(
+                id("lcc1", ID_1),
+                id("lcc2", ID_1),
+                id("lcc1", ID_2),
+                id("lcc2", ID_2),
+                id("vsc1", ID_1),
+                id("vsc2", ID_1),
+                id("vsc1", ID_2),
+                id("vsc2", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.HVDC_CONVERTER_STATION);
+    }
+
+    @Test
+    public void testIdentifiableStreamOverloadManagementSystem() {
+        Set<String> expected = Set.of(
+                id("overloadManagementSystem", ID_1),
+                id("overloadManagementSystem", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.OVERLOAD_MANAGEMENT_SYSTEM);
+    }
+
+    @Test
+    public void testIdentifiableStreamDcNode() {
+        Set<String> expected = Set.of(
+                id("dcNode1", ID_1),
+                id("dcNode2", ID_1),
+                id("dcNode1", ID_2),
+                id("dcNode2", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.DC_NODE);
+    }
+
+    @Test
+    public void testIdentifiableStreamDcSwitch() {
+        Set<String> expected = Set.of(
+                id("dcSwitch1", ID_1),
+                id("dcSwitch1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.DC_SWITCH);
+    }
+
+    @Test
+    public void testIdentifiableStreamDcGround() {
+        Set<String> expected = Set.of(
+                id("dcGround1", ID_1),
+                id("dcGround1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.DC_GROUND);
+    }
+
+    @Test
+    public void testIdentifiableStreamDcLine() {
+        Set<String> expected = Set.of(
+                id("dcLine1", ID_1),
+                id("dcLine1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.DC_LINE);
+    }
+
+    @Test
+    public void testIdentifiableStreamLcc() {
+        Set<String> expected = Set.of(
+                id("lccDetailed1", ID_1),
+                id("lccDetailed1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.LINE_COMMUTATED_CONVERTER);
+    }
+
+    @Test
+    public void testIdentifiableStreamVsc() {
+        Set<String> expected = Set.of(
+                id("vscDetailed1", ID_1),
+                id("vscDetailed1", ID_2)
+        );
+        assertIdentifiableStreamEqual(expected, IdentifiableType.VOLTAGE_SOURCE_CONVERTER);
+    }
+
+    @Test
+    public void testIdentifiableStreamUnsupportedType() {
+        // unsupported types also include DC_BUS
+        assertThrows(PowsyblException.class, () -> fullNetwork.getIdentifiableStream(IdentifiableType.BUS));
+    }
+
+    // GROUND not tested because there is no GROUND in the test network we are using
+
+    private void assertIdentifiableStreamEqual(Set<String> expected, IdentifiableType type) {
+        Set<String> actualIds = fullNetwork
+                .getIdentifiableStream(type)
+                .map(Identifiable::getId)
+                .collect(Collectors.toSet());
+        assertEquals(expected, actualIds);
     }
 }
