@@ -14,7 +14,6 @@ import org.junit.jupiter.api.Test;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -30,7 +29,7 @@ class LimitViolationTest {
                 .map(v -> LimitViolationHelper.getCountry(v, n))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Test
@@ -62,7 +61,7 @@ class LimitViolationTest {
         List<Double> expectedVoltages = Arrays.asList(380.0, 380.0, 380.0, 380.0, 380.0);
         List<Double> voltages = violations.stream()
                 .map(v -> LimitViolationHelper.getNominalVoltage(v, network))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedVoltages, voltages);
     }
@@ -74,7 +73,7 @@ class LimitViolationTest {
         List<String> expectedVoltageLevelIds = Arrays.asList("VLHV1", "VLHV2", "VLHV1", "VLHV2", "VLHV1");
         List<String> voltages = violations.stream()
                 .map(v -> LimitViolationHelper.getVoltageLevelId(v, network))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedVoltageLevelIds, voltages);
     }
@@ -87,12 +86,16 @@ class LimitViolationTest {
                 1000, 1, 1100, TwoSides.ONE);
         LimitViolation limitViolation3 = new LimitViolation("testId", null, LimitViolationType.APPARENT_POWER, null, 6300,
                 1000, 1, 1100, ThreeSides.THREE);
-        String expected1 = "Subject id: testId, Subject name: null, limitType: HIGH_VOLTAGE, limit: 420.0, limitName: high, acceptableDuration: 2147483647, limitReduction: 1.0, value: 500.0, side: null";
-        String expected2 = "Subject id: testId, Subject name: null, limitType: CURRENT, limit: 1000.0, limitName: null, acceptableDuration: 6300, limitReduction: 1.0, value: 1100.0, side: ONE";
-        String expected3 = "Subject id: testId, Subject name: null, limitType: APPARENT_POWER, limit: 1000.0, limitName: null, acceptableDuration: 6300, limitReduction: 1.0, value: 1100.0, side: THREE";
+        LimitViolation limitViolation4 = new LimitViolation("testId", null, LimitViolationType.LOW_VOLTAGE,
+            1000, 1, 1100, new BusBreakerViolationLocation(List.of("busId1", "busId2")));
+        String expected1 = "Subject id: testId, Subject name: null, limitType: HIGH_VOLTAGE, limit: 420.0, limitName: high, acceptableDuration: 2147483647, limitReduction: 1.0, value: 500.0, side: null, voltageLocation: null";
+        String expected2 = "Subject id: testId, Subject name: null, limitType: CURRENT, limit: 1000.0, limitName: null, acceptableDuration: 6300, limitReduction: 1.0, value: 1100.0, side: ONE, voltageLocation: null";
+        String expected3 = "Subject id: testId, Subject name: null, limitType: APPARENT_POWER, limit: 1000.0, limitName: null, acceptableDuration: 6300, limitReduction: 1.0, value: 1100.0, side: THREE, voltageLocation: null";
+        String expected4 = "Subject id: testId, Subject name: null, limitType: LOW_VOLTAGE, limit: 1000.0, limitName: null, acceptableDuration: 2147483647, limitReduction: 1.0, value: 1100.0, side: null, voltageLocation: BusBreakerViolationLocation{busIds='[busId1, busId2]'}";
         assertEquals(expected1, limitViolation1.toString());
         assertEquals(expected2, limitViolation2.toString());
         assertEquals(expected3, limitViolation3.toString());
+        assertEquals(expected4, limitViolation4.toString());
 
     }
 }
