@@ -13,7 +13,6 @@ import com.powsybl.timeseries.ast.NodeCalc;
 import java.util.List;
 import java.util.Map;
 import java.util.ServiceLoader;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -25,7 +24,7 @@ public interface CalculatedTimeSeriesDslLoader {
     static CalculatedTimeSeriesDslLoader find() {
         List<CalculatedTimeSeriesDslLoader> loaders = ServiceLoader.load(CalculatedTimeSeriesDslLoader.class).stream()
                 .map(ServiceLoader.Provider::get)
-                .collect(Collectors.toList());
+                .toList();
         if (loaders.isEmpty()) {
             throw new PowsyblException("No calculated time series DSL loader found");
         } else if (loaders.size() > 1) {
